Fix #23 - Print original string in the answer key Also fixed problem where Patristocrats were not getting broken into chunks on the printed test

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,10 @@ table.mfind {
     width: 20px;
 }
 
+.origtext {
+    font-style: italic;
+}
+
 .prfreq thead .topleft,
 .ckfreq thead .topleft,
 .tfreq thead .topleft {
